hotfix: DTO Projection으로 N+1 문제 해결